--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
+    "js-base64": "^3.7.7",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "material-react-toastify": "^10.0.5",
     "memorystore": "^1.6.7",
